# analysis

./: .gitignore  pyproject.toml
app/: main.py
app/api/v1/endpoints/: document.py
app/core/: config.py
app/schemas/: document.py
app/services/: __init__.py  document.py
tests/: test_document.py
